안쓰는 코드 제거, Swagger 설정 변경